@@ -23,6 +23,9 @@ system and places it in \fB/var/log/ovs-bugtool\fR.
 .IP "\fB\-\-all\fR"
 Use all available capabilities.
 .
+.IP "\fB\-\-ovs\fR"
+Use only Open vSwitch relevant capabilities.
+.
 .IP "\fB\-\-capabilities\fR"
 List \fBovs\-bugtool\fR capabilities.
 .
